# opensolaris-backgrounds

./: AUTHORS  ChangeLog  Makefile.am  acconfig.h  autogen.sh  configure.in
opensolaris/: Makefile.am  opensolaris-backgrounds.xml.in.in
po/: ChangeLog  POTFILES.in
